--- a/backgroundForGame.css
+++ b/backgroundForGame.css
@@ -11,18 +11,23 @@ body{
     background-color: black;
     border: solid darkred 5px;
     padding: 8%;
+    max-height: 25%;
 }
-
-#titleContainer p {
+.red{
     color: darkred;
+}
+.white{
+    color: white;
+}
+#titleContainer p {
     font-family: 'Nosifer', cursive;
-    z-index: 25;
+    z-index: 20;
     padding: 0;
     margin: 0;
 }
 
 #canvas3 {
-    z-index: 5;
+    z-index: 2;
     height: 23%;
     width: 98%;
     position: absolute;
@@ -31,7 +36,7 @@ body{
 }
 
 #canvas2 {
-    z-index: 10;
+    z-index: 3;
     height: 23%;
     width: 98%;
     position: absolute;
@@ -40,7 +45,7 @@ body{
 }
 
 #canvas1 {
-    z-index: 20;
+    z-index: 4;
     height: 23%;
     width: 98%;
     position: absolute;
