--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ p{
 p:nth-child(2n){
     background-color:#001900;
 }
+#gameBox{
+    background-color:#000000;
+    color:white;
+    height:calc(100% - 5.5em);
+    width:100%;
+}
 #storybox{
     background-color:#001900;
     color:white;
